<resources>
    <string name="app_name">CityEye</string>
    <string name="title_activity_login">Login activity</string>
    <string name="capture">Capture</string>
    <string name="reports">Reports</string>
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="events">Events</string>
    <string name="client_ID">626523382367-a81bjbmmo0n2mrm614629stpfgc2mj4m.apps.googleusercontent.com</string>
    <string name="maps_key">AIzaSyCUY11RGhx0bJVxMRphkwgtBbxobSDtDTo</string>
    <string name="dialog_permission_request_title">Permissions</string>
    <string name="dialog_permission_request_support">Please open app settings and grant camera and location permissions.
    Thank you.</string>
    <string name="dialog_permission_request_open_settings">Open setting</string>
    <string name="dialog_permission_request_cancel">Cancel</string>
    <string name="profile_dropdown_profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="profile_dropdown_signOut">Sign out</string>
    <string name="title_activity_problem_preview">ProblemPreview</string>
    <string name="action_settings">Settings</string>
    <string name="problem_detail">Problem details</string>
    <string name="problemPreviewTitle">Title: </string>
    <string name="problemPreviewDescription">Description: </string>
    <string name="problemPreviewAddress">Address: </string>
    <string name="details">Details</string>
    <string name="send">SEND</string>
    <string name="titleOrDescriptionTooLong">Title or description is too long!</string>
    <string name="titleOrDescriptionNotLongEnough">Title or description is not long enough!</string>
    <string name="errorUploading">Error occured while uploading!</string>
    <string name="problemExists">Problem already exists!</string>
    <string name="userExists">User already exists!</string>
    <string name="problemUploaded">Problem uploaded successfully!</string>
    <string name="noInternet">No internet connection!</string>
    <string name="geocoderError">Unable to get address!</string>
    <string name="errorLogging">Error while logging in.</string>
    <string name="profileNoProblems">%1$d problems reported</string>
    <string name="title_activity_profile">Profile</string>
    <string name="notification_channel_id">CHANNEL_ID</string>
    <string name="isSolved">Is solved: </string>
    <string name="problemResolved">Problem Resolved</string>
    <string name="notifications">Notifications</string>
    <string name="notInSupportedCityTitle">Oops!</string>
    <string name="notInSupportedCityDescription">You are not in supported city</string>
    <string name="retry">RETRY</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="intro_first_slide_title">Make a Difference</string>
    <string name="intro_first_slide">Report issues in your city with ease. Take a photo and add details to help improve your community.</string>
    <string name="intro_second_slide_title">Track Your Reports</string>
    <string name="intro_second_slide">Get updates on issues you have reported and see what others are reporting.</string>
    <string name="intro_third_slide_title">Join Forces with Your Neighbors</string>
    <string name="intro_third_slide">Connect with your community. See what issues are being reported near you and join discussions to make your voice heard.</string>
    <string name="welcome_to_city_eye">Welcome to CityEye!</string>
    <string name="lets_improve">Let\'s improve our city together.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">%1$s/%2$s</string>
    <string name="place_image">https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&amp;photo_reference=%1$s&amp;key=%2$s</string>
    <string name="shareEvent">Hey, check out this event from CityEye! \n %1$s \n %2$s \n %3$s \n %4$s $</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>