<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nullpointerexception.cityeye.MainActivity">

    <item
        android:id="@+id/navigation_capture"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_problem"
        android:title="@string/reports" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_places"
        android:title="@string/places" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event"
        android:title="@string/events" />


</menu>