<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProblemPreview"
    android:id="@+id/layout">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationDone"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/anim_done"
        android:visibility="gone" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationError"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/anim_error"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorBlack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/problemImage"
                android:layout_width="414dp"
                android:layout_height="300dp"
                android:layout_gravity="center|center"
                android:layout_marginTop="108dp"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/problemTitleEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/problemPreviewTitle"
                android:layout_marginTop="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:maxHeight="200dp"
                app:layout_constraintBottom_toTopOf="@+id/problemDescriptionEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problemImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/problemDescriptionEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:maxHeight="200dp"
                android:hint="@string/problemPreviewDescription"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:layout_constraintBottom_toTopOf="@id/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problemTitleEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/problemPreviewAddress"
                app:layout_constraintEnd_toStartOf="@+id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problemDescriptionEditText" />

            <TextView
                android:id="@+id/address"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="204dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problemDescriptionEditText"
                tools:text="TestTestTestTestTestTestTestTestTestTestTestTestTestTest" />

            <Button
                android:id="@+id/fab"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                app:icon="@drawable/ic_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address"
                app:layout_constraintVertical_bias="0.217" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintStart_toEndOf="@+id/fab"
                app:layout_constraintTop_toBottomOf="@+id/address"
                app:layout_constraintVertical_bias="0.217" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>